<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minimap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome!</string>
    <string name="server_ip_hint">10.0.2.2:9000</string>
    <string name="button_server_ip_go">Go</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_display_message">Message</string>
    <string name="minimap_title">Minimap</string>
    <string name="minimap_subtitle">A project by North Star and Lockheed Martin</string>
    <string name="enter_ip_error_text"></string>
    <string name="enter_ip_prompt_text">Enter the server\'s IP address:</string>

    <string-array name="left_drawer_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

    <string-array name="right_drawer_items">
        <item>Connect to Server</item>
        <item>Select Map</item>
    </string-array>

    <string name="button_map_production">Connect</string>
    <string name="button_select_go">Launch Map</string>
    <string name="calibrated">Calibration point set</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_test_map">Launch Test Map</string>
    <string name="no_server_data">No data found on provided server</string>
    <string name="reset_calibration">Reset calibration</string>
    <string name="reset_calibration_failed">Calibration failed to reset</string>
    <string name="reset_calibration_success">Calibration reset</string>
    <string name="restart_bluetooth">Restart bluetooth</string>
    <string name="select_map">Select the map you want to load</string>
    <string name="select_team">Select your team</string>
    <string name="select_username">Enter a username</string>
    <string name="settings">Settings</string>
    <string name="show_beacon_range_summary">Show circles around beacons indicating estimated distance</string>
    <string name="show_beacon_range_title">Show beacon range circles</string>
    <string name="show_proximity_zone_summary">Highlights nearby beacon when within a certain proximity</string>
    <string name="show_proximity_zone_title">Enable proximity zones</string>
    <string name="show_proximity_zone_range_summary">Minimum distance (in feet) to activate a beacon proximity zone</string>
    <string name="show_proximity_zone_range_title">Proximity zone range</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_selection">Map Selection</string>
    <string name="toggle_beacon_circles">Toggle beacon circles</string>
    <string name="username_unavailable">That username is unavailable.  Please try another.</string>
</resources>
