<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectionActivity"
    android:background="@color/landing_background"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/map_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/select_map"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="left"
        android:textSize="16sp"
        android:textColor="@color/landing_subtitle"/>

    <Spinner
        android:id="@+id/map_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/landing_edittext"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/team_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/select_team"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/landing_subtitle"/>

    <Spinner
        android:id="@+id/team_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/landing_edittext"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/select_username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/landing_subtitle"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:background="@color/landing_edittext"
        android:layout_marginBottom="30dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <View
            android:layout_width="152dp"
            android:layout_height="51dp"
            android:id="@+id/launchButtonBackground"
            android:clickable="false"
            android:background="#fff"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/launchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerChoices"
            android:text="@string/button_select_go"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:height="61dp"/>

    </FrameLayout>

</LinearLayout>